# goit-ds-hw-02

./: Dockerfile  README.md  create_db.py  operation.py  pyproject.toml  requirements.txt  seed.py  task.db  task.sql
database/: test.sqlite
