[tool.poetry]
name = "goit-ds-hw-01"
version = "0.1.0"
description = "AdressBookBot"
authors = ["Sergii Minko <minkosergii@gmail.com>"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
